--- a/index 2 (1).html
+++ b/index 2 (1).html
@@ -36,7 +36,7 @@ function MM_swapImage() { //v3.0
       <td><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','bea/n.jpg',1)"></a>
         <nav><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','bea/n.jpg',1)"></a></nav>
              <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','bea/n.jpg',1)"></a><a href="bea/n.jpg" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','bea/n.jpg',1)"></a></td>
-      <td><a href="Home 1.html"><img src="bea/2.jpg" width="135" height="50" alt=""></a></td>
+      <td><a href="index.html"><img src="bea/2.jpg" width="135" height="50" alt=""></a></td>
       <td><img src="bea/4.jpg" width="135" height="50" alt=""/></td>
       <td><a href="dokumen.html"><img src="bea/3.jpg" width="135" height="50" alt=""></a></td>
       <td><a href="tips and trick.html"><img src="bea/5.jpg" width="135" height="50" alt=""></a></td>
@@ -54,3 +54,4 @@ function MM_swapImage() { //v3.0
 		</div>
 </body>
 </html>
+
