--- a/beasiswa1.html
+++ b/beasiswa1.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td><img src="bea/Screenshot 2025-11-09 141435.png" width="707" height="126" alt=""/></td>
-      <td><a href="Home 1.html"><img src="bea/2.jpg" width="135" height="50" alt=""></a></td>
+      <td><a href="index.html"><img src="bea/2.jpg" width="135" height="50" alt=""></a></td>
       <td><a href="beasiswa1.html"><img src="bea/4.jpg" width="135" height="50" alt=""></a></td>
       <td><a href="dokumen.html"><img src="bea/3.jpg" width="135" height="50" alt=""></a></td>
       <td><a href="tips and trick.html"><img src="bea/5.jpg" width="135" height="50" alt=""></a></td>
@@ -32,3 +32,4 @@
 </div>
 </body>
 </html>
+
